POST review is broken due to going thru swagger
